infrastructure/kubernetes/base/namespace.yaml
# One Data Studio Lite - Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: one-data-studio
  labels:
    name: one-data-studio
    project: data-platform
    component: platform
spec: {}
status: {}
